# portable-hash

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT.md  README.md
.github/workflows/: crates.yaml  rust.yaml
portable-hash/: Cargo.toml
portable-hash-macros/: Cargo.toml  README.md
portable-hash-macros/src/: lib.rs
portable-hash-tester/: Cargo.toml  README.md
portable-hash-tester/src/: fixture.rs  lib.rs  rng.rs
portable-hash-tester/src/tests/: mod.rs  test_alloc.rs  test_core.rs  test_primitives.rs  test_std.rs
portable-hash/src/: lib.rs
portable-hash/src/hash_impls/: alloc_lib.rs  core_lib.rs  hash_alloc.rs  hash_core.rs  hash_primitives.rs  hash_std.rs  mod.rs  primitives.rs  std_lib.rs
portable-hash/src/impls/: alloc_lib.rs  core_lib.rs  mod.rs  primitives.rs
portable-hash/src/ord_impls/: alloc_lib.rs  core_lib.rs  mod.rs  ord_alloc.rs  ord_core.rs  ord_primitives.rs  ord_std.rs  primitives.rs  std_lib.rs
sha-hasher/: Cargo.toml  README.md
sha-hasher/src/: lib.rs
sha-hasher/tests/: fixtures.csv
src/: impls.rs  lib.rs
src/impls/: mod.rs  std_lib.rs
