[package]
name = "portable-hash"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"  # prt.addr() limits us here
repository = "https://github.com/hoxxep/portable-hash"
description = "Portable, stable hashing traits for Rust."
keywords = ["hash", "hashing", "stable", "portable", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Liam Gray <gmail@liamg.me>"]
exclude = ["Cargo.lock", ".github", ".editorconfig"]

[features]
nightly = []

[dependencies]
