[package]
name = "portable-hash-tester"
description = "Test PortableHash implementations for stability between changes and versions."
version = "0.1.0"
edition = "2021"

[features]
default = []
alloc = ["portable-hash/alloc"]  # enable PortableHash implementations of alloc types, String and Vec
std = ["alloc", "portable-hash/std"]  # enable std library for testing std types

[dependencies]
portable-hash = { path = "../portable-hash", default-features = false }
rustversion = "1.0"
csv = "=1.4"  # fixed to 1.1 for older MSRV compatibility
hex = "0.4"
