[package]
name = "portable-hash-tester"
description = "Test PortableHash implementations for stability between changes and versions."
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"
repository = "https://github.com/hoxxep/portable-hash"
keywords = ["hash", "hashing", "stable", "portable", "testing"]
categories = ["algorithms", "development-tools::testing"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Liam Gray <gmail@liamg.me>"]

[features]
default = []
alloc = ["portable-hash/alloc"]  # enable PortableHash implementations of alloc types, String and Vec
std = ["alloc", "portable-hash/std"]  # enable std library for testing std types

[dependencies]
portable-hash = { path = "../portable-hash", default-features = false }
rustversion = "1.0"
csv = "=1.2"  # fixed to 1.2 as old csv didn't specify a rust-version
hex = "0.4"
