[package]
name = "portable-hash"
version = "0.3.0"
edition = "2021"
#rust-version = "1.83.0"  # prt.addr() limits us here
repository = "https://github.com/hoxxep/portable-hash"
description = "Portable, stable hashing traits for Rust."
keywords = ["hash", "hashing", "stable", "portable", "no-std"]
categories = ["algorithms", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Liam Gray <gmail@liamg.me>"]

[features]
default = ["std"]
alloc = [] # enable PortableHash implementations of alloc types, String and Vec
std = ["alloc"]  # enable PortableHash implementations of std library types

[dependencies]
portable-hash-macros = { version = "0.1.1" }
rustversion = "1.0.21"
