[package]
name = "sha-hasher"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"  # prt.addr() limits us here
repository = "https://github.com/hoxxep/portable-hash"
description = "A SHA-256 hasher using portable-hash traits"
keywords = ["hash", "hashing", "stable", "portable", "no-std"]
categories = ["algorithms", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Liam Gray <gmail@liamg.me>"]

[dependencies]
portable-hash = { workspace = true, default-features = false }
sha2 = "0.10.9"

[dev-dependencies]
portable-hash = { workspace = true, features = ["std"] }
