[package]
name = "sha-hasher"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hoxxep/portable-hash"
description = "A SHA-256 hasher using portable-hash traits"
keywords = ["hash", "hashing", "stable", "portable", "no-std"]
categories = ["algorithms", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Liam Gray <gmail@liamg.me>"]
publish = false

[dependencies]
portable-hash = { path = "../portable-hash", default-features = false }
sha2 = "0.10.9"

[dev-dependencies]
portable-hash = { path = "../portable-hash", features = ["std"] }
